# s9

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TASKS.md  Taskfile.yml  progress.txt  skills-lock.json
.claude/skills/write-design-doc/: SKILL.md
deploy/: README.md
docs/dd/: api-contract.md  api-endpoints.md  attachments.md  auth.md  build-pipeline.md  database.md  frontend.md  notifications.md  search.md  ticket-slugs.md
docs/prd/: 1. Initial PRD.md  2. Ticket Slugs.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: account.spec.ts  admin-panel.spec.ts  attachment-upload.spec.ts  auth.spec.ts  command-bar.spec.ts  comment-thread.spec.ts  component-tree.spec.ts  create-ticket.spec.ts  keyboard-navigation.spec.ts  markdown-editor.spec.ts  markdown-renderer.spec.ts  milestone-list.spec.ts  smoke.spec.ts  ticket-detail.spec.ts  ticket-list.spec.ts
frontend/e2e/fixtures/: mock-data.ts  test-fixtures.ts
frontend/src/: main.tsx  router.tsx
frontend/src/api/: attachments.ts  auth.ts  client.ts  comments.ts  components.ts  index.ts  milestones.ts  tickets.ts  types.ts  users.ts
frontend/src/components/: AttachmentList.module.css  AttachmentList.test.tsx  AttachmentList.tsx  FilterBar.module.css  FilterBar.test.tsx  FilterBar.tsx  InlineSelect.module.css  InlineSelect.test.tsx  InlineSelect.tsx  InlineText.module.css  InlineText.test.tsx  InlineText.tsx  Lazy.tsx  MarkdownEditor.module.css  MarkdownEditor.test.tsx  MarkdownEditor.tsx  MarkdownRenderer.module.css  MarkdownRenderer.test.tsx  MarkdownRenderer.tsx  PriorityBadge.module.css  PriorityBadge.tsx  StatusBadge.module.css  StatusBadge.tsx  TypeBadge.module.css  TypeBadge.tsx  UserPill.module.css  UserPill.tsx  remarkS9References.test.ts  remarkS9References.ts
frontend/src/components/layout/: CommandBar.module.css  CommandBar.test.tsx  CommandBar.tsx  PageHeader.module.css  PageHeader.tsx  PageHeaderContext.tsx  RootLayout.module.css  RootLayout.tsx  Sidebar.module.css  Sidebar.tsx  navConfig.tsx  pageHeaderState.ts  usePageHeader.ts
frontend/src/features/account/: AccountPage.module.css  AccountPage.test.tsx  AccountPage.tsx
frontend/src/features/admin/: AdminPanel.module.css  AdminPanel.test.tsx  AdminPanel.tsx  ComponentManagement.module.css  ComponentManagement.test.tsx  ComponentManagement.tsx  SystemSettings.module.css  SystemSettings.test.tsx  SystemSettings.tsx  UserManagement.test.tsx  (+3 more)
frontend/src/hooks/: useKeyboardNavigation.test.ts  useKeyboardNavigation.ts  useSSE.ts
frontend/src/styles/: globals.css  reset.css  tokens.css  typography.css
migrations/: 001_initial_schema.sql  002_fts5_setup.sql  003_add_component_slug.sql  004_add_notification_payload.sql
prototypes/: 01-ticket-list.html  02-ticket-detail.html  03-component-tree.html  04-create-ticket.html  05-layout.html  06-milestone-view.html  style.css
src/: cli.rs  config.rs  email.rs  embed.rs  events.rs  main.rs  mentions.rs  notifications.rs  references.rs  slug.rs  storage.rs
src/api/: attachment.rs  auth.rs  comment.rs  component.rs  error.rs  events.rs  milestone.rs  mod.rs  mute.rs  oidc.rs  ticket.rs  user.rs
src/auth/: middleware.rs  mod.rs  password.rs
src/db/: mod.rs
src/models/: attachment.rs  comment.rs  component.rs  enums.rs  milestone.rs  mod.rs  notification.rs  pagination.rs  password.rs  session.rs  ticket.rs  user.rs
src/repos/: attachment.rs  comment.rs  component.rs  cursor.rs  fts.rs  milestone.rs  mod.rs  session.rs  ticket.rs  user.rs
src/search/: builder.rs  mod.rs  parser.rs
tools/starpom/: Cargo.toml  prompt.md  pyproject.toml
tools/starpom/src/: cli.rs  main.rs  runner.rs  tasks.rs
tools/starpom/starpom/: __init__.py  __main__.py  cli.py  runner.py  tasks.py
(+34 files in other folders)
