[package]
name = "s9"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
clap = { version = "4", features = ["derive", "env"] }
rust-embed = { version = "8", features = ["compression"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras"] }
argon2 = "0.5"
mime_guess = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
