[package]
name = "s9"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
rust-embed = { version = "8", features = ["compression"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
argon2 = { version = "0.5", features = ["rand"] }
rand_core = { version = "0.6", features = ["getrandom"] }
mime_guess = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
infer = "0.16"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
openidconnect = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
