[package]
name = "starpom"
version = "0.1.0"
edition = "2024"
description = "Autonomous agent loop — picks tasks from TASKS.md and drives Claude to implement them."

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
duct = "0.13"
regex = "1"

[dev-dependencies]
tempfile = "3"
