[tool.poetry]
name = "starpom"
version = "0.1.0"
description = "Autonomous agent loop for S9 task execution"
authors = []
packages = [{include = "starpom"}]

[tool.poetry.scripts]
starpom = "starpom.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
